; ModuleID = '/home/carl/AnghaBench/TDengine/deps/jni/windows/win32/bridge/extr_AccessBridgeCalls.c_getVisibleChildrenCount.c'
source_filename = "/home/carl/AnghaBench/TDengine/deps/jni/windows/win32/bridge/extr_AccessBridgeCalls.c_getVisibleChildrenCount.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (i64, i32)* }

@theAccessBridgeInitializedFlag = common dso_local global i64 0, align 8
@TRUE = common dso_local global i64 0, align 8
@theAccessBridge = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @getVisibleChildrenCount(i64 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store i64 %0, i64* %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i64, i64* @theAccessBridgeInitializedFlag, align 8
  %7 = load i64, i64* @TRUE, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %14

9:                                                ; preds = %2
  %10 = load i32 (i64, i32)*, i32 (i64, i32)** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @theAccessBridge, i32 0, i32 0), align 8
  %11 = load i64, i64* %4, align 8
  %12 = load i32, i32* %5, align 4
  %13 = call i32 %10(i64 %11, i32 %12)
  store i32 %13, i32* %3, align 4
  br label %16

14:                                               ; preds = %2
  %15 = load i32, i32* @FALSE, align 4
  store i32 %15, i32* %3, align 4
  br label %16

16:                                               ; preds = %14, %9
  %17 = load i32, i32* %3, align 4
  ret i32 %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
